[package]
name = "moara"
version = "0.3.1"
authors = ["Sorin Bolos <sorinalbolos@yahoo.com>", "Voicu Tomut <tomutvoicuandrei@gmail.com>"]
edition = "2018"

[dependencies]
num-complex = "0.3.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.2"
structopt = "0.3.23"