[package]
name = "moara"
version = "0.6.0"
authors = ["Sorin Bolos <sorinalbolos@yahoo.com>", "Voicu Tomut <tomutvoicuandrei@gmail.com>", "Radu Marginean <radu.marg@gmail.com>"]
edition = "2018"

[dependencies]
json = "0.12.4"
lazy_static = "1.4.0"
num-complex = "0.3.0"
rand = "0.8"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.2"
structopt = "0.3.23"
